--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ html {
     --default-clr: #f5f6f5;
     --banner-clr: #e3e3e3ff;
     --primary-clr: green;
+    --subprimary-clr: rgba(0, 128, 0, 0.116);
     --secondary-clr: blue;
     --font-size: 1rem;
     --btn-lg-padding: .7rem 2rem;
@@ -50,6 +51,22 @@ html {
     display: none;
 }
 
+.d-block {
+    display: block !important;
+    animation: fromTop .3s;
+    -webkit-animation: fromTop .3s;
+    -moz-animation: fromTop .3s;
+    -o-animation: fromTop .3s;
+}
+
+.d-flex {
+    display: flex !important;
+    animation: fromTop .3s;
+    -webkit-animation: fromTop .3s;
+    -moz-animation: fromTop .3s;
+    -o-animation: fromTop .3s;
+}
+
 .nav-flex {
     display: flex;
     animation: from-top .3s;
@@ -60,6 +77,7 @@ html {
 
 .sticky-top {
     position: fixed !important;
+    top: 0%;
     width: 100%;
     animation: fromTop 1s;
     -webkit-animation: fromTop 1s;
@@ -67,6 +85,32 @@ html {
     -o-animation: fromTop 1s;
     z-index: 12;
 }
+
+.active-category {
+    color: var(--primary-clr);
+}
+
+.active-category::before {
+    background-color: var(--primary-clr) !important;
+    animation: from-w-100 1s;
+    -webkit-animation: from-w-100 1s;
+    -moz-animation: from-w-100 1s;
+    -o-animation: from-w-100 1s;
+}
+
+.hide-icon {
+    transform: rotate(-45deg) !important;
+    -webkit-transform: rotate(-45deg) !important;
+    -moz-transform: rotate(-45deg) !important;
+    -o-transform: rotate(-45deg) !important;
+    top: -30% !important;
+}
+
+.active-price-range {
+    outline: 2px solid green !important;
+    color: var(--primary-clr);
+}
+
 
 /*----------------------- End of grobal varibales */
 
@@ -81,7 +125,8 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+button:hover,
+.btn:hover {
     box-shadow: 0 1px 2px 3px var(--primary-clr);
 }
 
@@ -89,6 +134,10 @@ a {
     text-decoration: none;
     color: #000;
     font-weight: 600;
+}
+
+a:hover {
+    color: var(--primary-clr);
 }
 
 li {
@@ -113,6 +162,7 @@ li {
 
 /**============= container =============== */
 .container {
+    max-width: 960px;
     width: 100%;
     margin: 0 auto;
 }
@@ -124,6 +174,7 @@ li {
 /** ============= header =============== */
 
 header {
+    max-width: 1300px;
     min-height: 100px;
     display: flex;
     flex-direction: row;
@@ -142,7 +193,6 @@ header {
 }
 
 .logo a {
-    /* font-size: calc(var(--font-size) - 1rem) */
     font-weight: 800;
     color: var(--primary-clr);
 }
@@ -192,7 +242,7 @@ nav ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: .5rem;
 }
 
 nav ul li {
@@ -203,7 +253,7 @@ nav ul li {
 }
 
 nav ul li a {
-    width: 30%;
+    width: 45%;
     padding: .5rem 0rem;
     font-size: var(--font-size);
     text-transform: capitalize;
@@ -224,7 +274,6 @@ nav ul li a::before {
     -webkit-transform: translate(0%, -50%);
     -moz-transform: translate(0%, -50%);
     -o-transform: translate(0%, -50%);
-
 }
 
 nav ul li .active-nav-link {
@@ -263,19 +312,18 @@ nav ul li:hover>a {
     object-position: center center;
     -o-object-fit: cover;
     -o-object-position: center center;
-    border-radius: inherit;
+    border-radius: 100%;
 }
 
 .account button {
     flex-grow: 1;
-    background-color: unset;
+    background-color: transparent;
     outline: 2px solid var(--primary-clr);
     color: #000;
 }
 
-.account button:last-child:hover {
+.account button:hover {
     background-color: var(--primary-clr);
-    outline: 2px solid var(--primary-clr);
     color: #fff;
 }
 
@@ -301,15 +349,20 @@ nav ul li:hover>a {
 .banner {
     display: flex;
     width: 100%;
-    height: 110vh;
-    background-color: #e3e3e3ff;
+    height: 400px;
+    background-color: var(--banner-clr);
     position: relative;
+}
+
+.banner .container {
+    display: flex;
 }
 
 .banner-content {
     width: 100%;
+    height: 100%;
     position: absolute;
-    top: 25%;
+    top: 0%;
     left: 50%;
     transform: translate(-50%, -25%);
     -webkit-transform: translate(-50%, -25%);
@@ -319,23 +372,34 @@ nav ul li:hover>a {
     flex-direction: column;
     gap: 1rem;
     z-index: 3;
+    padding: 3rem 0 0 0;
 }
 
 .banner-content h1 {
-    font-size: 1.7rem;
+    font-size: 3rem;
     text-align: center;
     align-self: center;
     text-transform: uppercase;
+    background: linear-gradient(to right, var(--primary-clr), var(--secondary-clr));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .banner-content p {
+    font-size: 1.3rem;
+    font-weight: 100;
     align-self: center;
     line-height: 1.7rem;
+    font-family: sans-serif;
     text-align: center;
     width: 90%;
 }
 
 .banner-content blockquote {
+    background: linear-gradient(120deg, var(--primary-clr), var(--secondary-clr));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: .9rem;
     align-self: center;
     line-height: 1.2rem;
     text-align: center;
@@ -346,9 +410,9 @@ nav ul li:hover>a {
 }
 
 .banner-content button {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     width: 80%;
-    align-self: center;
+    color: #fff;
 }
 
 .side-banner {
@@ -358,12 +422,318 @@ nav ul li:hover>a {
     right: 0;
     float: right;
     width: 40%;
-    height: 400px;
+    height: 100%;
     background-image: url(../imgs/img\ \(3\).jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
 }
+
+/*----------------------------------------------- End of banner */
+
+/**====================== nav-product-category ================*/
+
+.nav-product-category {
+    width: 100%;
+    height: auto;
+    padding: .3rem 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--subprimary-clr);
+    border-radius: 0 0 1rem 1rem;
+}
+
+.nav-product-category ul {
+    flex-basis: 70%;
+    flex-grow: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: .3rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-height: 50px;
+}
+
+.nav-product-category ul li {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-product-category ul li a {
+    text-transform: capitalize;
+    font-size: .7rem;
+    position: relative;
+}
+
+.nav-product-category ul li a::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    width: 10px;
+    height: 4px;
+    background-color: transparent;
+    border-radius: 1rem;
+}
+
+.nav-product-category .product-category-search {
+    flex-basis: 28%;
+    flex-grow: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-product-category .product-category-search form {
+    flex-basis: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--default-clr);
+    height: 40px;
+    position: relative;
+    border-radius: .6rem;
+}
+
+.nav-product-category .product-category-search form input[type="text"] {
+    flex-basis: 100%;
+    height: 100%;
+    padding: 0 30% 0 3%;
+    position: relative;
+    border-radius: .6rem;
+    border: none;
+    background-color: inherit;
+    color: #000;
+}
+
+.nav-product-category .product-category-search form input[type="text"]:focus {
+    outline: 2px solid var(--primary-clr);
+}
+
+.nav-product-category .product-category-search form input[type="submit"] {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(0%, -50%);
+    -webkit-transform: translate(0%, -50%);
+    -moz-transform: translate(0%, -50%);
+    -o-transform: translate(0%, -50%);
+    z-index: 1;
+    background-color: var(--primary-clr);
+    border: none;
+    border-radius: .6rem;
+    padding: 0rem .6rem;
+    height: 100%;
+    cursor: pointer;
+}
+
+/*--------------------------------- End of nav-product-category */
+
+
+/**=================================== Products ======================*/
+.products-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.products-container .products-category {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.products-container .products-category .product-price-range {
+    flex-basis: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: .3rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.products-container .products-category .product-price-range a {
+    flex-basis: 25%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: var(--subprimary-clr);
+    justify-content: space-around;
+    padding: .5rem 0;
+    border-radius: .3rem;
+    position: relative;
+    outline: 2px solid transparent;
+    font-weight: 500;
+}
+
+.products-container .products-category .product-price-range a span {
+    pointer-events: none;
+}
+
+.products-container .products {
+    flex-basis: 73%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem 1rem;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+}
+
+.products-container .products .product {
+    flex-basis: 20%;
+    min-width: 200px;
+    max-width: 410px;
+    flex-grow: 1;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: .1rem;
+    align-items: center;
+    position: relative;
+}
+
+.products-container .products .product .zoom-product {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+    -webkit-transform: translate(-50%, -40%);
+    -moz-transform: translate(-50%, -40%);
+    -o-transform: translate(-50%, -40%);
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    background-color: var(--subprimary-clr);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.products-container .products .product .zoom-product span {
+    color: #000;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    border-radius: inherit;
+}
+
+.products-container .products .product .zoom-product:hover {
+    background-color: var(--primary-clr);
+    filter: brightness(70%);
+    -webkit-filter: brightness(70%);
+    -moz-filter: brightness(70%);
+    -o-filter: brightness(70%);
+}
+
+.products-container .products .product .product-img {
+    width: 100%;
+    flex-basis: 70%;
+    min-height: 100px;
+    flex-grow: 1;
+}
+
+.products-container .products .product .product-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.products-container .products .product .about-product {
+    flex-basis: 13%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-transform: lowercase;
+}
+
+.products-container .products .product .about-product .product-source {
+    flex-basis: 45%;
+    font-size: .8rem;
+}
+
+.products-container .products .product .about-product .product-price {
+    flex-basis: 45%;
+    height: auto;
+    text-align: center;
+    color: var(--primary-clr);
+    font-size: 1rem;
+    font-weight: 800;
+}
+
+.products-container .products .product .product-link {
+    width: 100%;
+    height: auto;
+    background-color: var(--primary-clr);
+    text-align: center;
+    border-radius: .3rem;
+    display: flex;
+}
+
+.products-container .products .product .product-link a {
+    width: 100%;
+    height: 100%;
+    color: var(--default-clr);
+    text-transform: capitalize;
+    font-weight: unset;
+    border-radius: inherit;
+    padding: .3rem 0;
+}
+
+
+
+
+footer {
+    width: 100%;
+    height: 400px;
+}
+
+
+
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: var(--subprimary-clr);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(4, 48, 4);
+    border: 2px solid var(--primary-clr);
+    border-radius: .3rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-clr);
+    border: 2px solid rgb(4, 48, 4);
+}
+
+
+
+
+
 
 
 /**================= media queries ===============*/
@@ -371,9 +741,7 @@ nav ul li:hover>a {
 /*--------------------- small screens */
 @media screen and (min-width:0px) {
     header {
-        box-shadow: var(--box-shadow);
         background-color: var(--default-clr);
-
     }
 
     .logo {
@@ -390,7 +758,8 @@ nav ul li:hover>a {
     }
 
     nav ul li a {
-        padding-left: 1rem;
+        padding-left: .5rem;
+        width: 35%;
     }
 
     nav ul li a::before {
@@ -416,9 +785,32 @@ nav ul li:hover>a {
         height: 50px;
     }
 
+    .banner-content {
+        top: 25%;
+        gap: .8rem;
+    }
+
+    .banner-content h1 {
+        font-size: 2.3rem;
+    }
+
+    .banner-content p {
+        font-size: 1.2rem;
+        text-align: unset;
+    }
+
+    .banner-content blockquote {
+        font-size: 1rem;
+    }
+
+    .banner-content button {
+        margin-top: .3rem;
+        align-self: center;
+    }
+
     .side-banner {
-        position: fixed;
-        top: 10%;
+        position: absolute;
+        top: 0%;
         width: 100%;
         height: 100%;
         bottom: 0% !important;
@@ -446,6 +838,10 @@ nav ul li:hover>a {
         border-radius: 0 .2rem .2rem 0;
     }
 
+    nav ul li a {
+        width: 45%;
+    }
+
     .account .profile-container {
         position: relative;
         display: flex;
@@ -459,8 +855,20 @@ nav ul li:hover>a {
     }
 
     .banner-content {
-        top: 30%;
-        gap: 2rem;
+        gap: 1.5rem;
+    }
+
+    .banner-content h1 {
+        font-size: 3.2rem;
+    }
+
+    .banner-content p {
+        font-size: 1.2rem;
+        text-align: unset;
+    }
+
+    .banner-content blockquote {
+        font-size: 1.1rem;
     }
 
     .banner h1,
@@ -470,12 +878,11 @@ nav ul li:hover>a {
     }
 
     .banner-content button {
-        margin-top: .5rem;
+        margin-top: 0;
         width: 40%;
     }
 
 }
-
 
 /*--------------------- large screens */
 @media screen and (min-width:768px) {
@@ -485,7 +892,7 @@ nav ul li:hover>a {
     }
 
     .logo {
-        padding: .3rem .3rem .3rem 5rem;
+        padding: .3rem .3rem .3rem 3rem;
     }
 
     nav {
@@ -548,10 +955,8 @@ nav ul li:hover>a {
         display: none;
     }
 
-    .banner {
-        height: 89vh;
+    .banner .container {
         justify-content: space-between;
-        justify-content: flex-start;
         position: relative;
     }
 
@@ -565,23 +970,66 @@ nav ul li:hover>a {
         -o-transform: unset;
         flex-basis: 50%;
         gap: 1rem;
-        justify-content: center;
+        justify-content: flex-start;
+        padding: 3rem 0 0 4rem;
     }
 
     .banner-content h1,
     .banner-content p,
     .banner-content blockquote {
-        width: 80%;
+        width: 100%;
         text-align: unset;
     }
 
+    .banner-content h1 {
+        font-size: 3rem;
+    }
+
+    .banner-content p {
+        font-size: 1.2rem;
+        text-align: unset;
+    }
+
+    .banner-content blockquote {
+        font-size: .9rem;
+    }
+
+    .banner-content button {
+        align-self: flex-start;
+        width: 55%;
+    }
+
     .side-banner {
-        position: absolute;
-        width: 400px;
-        top: 10%;
-        height: 90%;
+        position: unset;
+        width: 40%;
+        top: 0%;
         opacity: 1;
         right: 0;
+    }
+
+    .nav-product-category ul {
+        flex-basis: 50%;
+    }
+
+    .nav-product-category ul li a {
+        font-size: .8rem;
+        padding: 0 .5rem;
+    }
+
+    .products-container .products-category .product-price-range a {
+        flex-basis: 10%;
+        padding: .3rem .2rem;
+    }
+
+    .products-container .products .product {
+        flex-basis: 20%;
+        min-width: 200px;
+        height: 250px;
+    }
+
+    .products-container .products .product .product-link {
+        font-size: 1rem;
+        padding: .3rem 0;
     }
 }
 
@@ -593,50 +1041,71 @@ nav ul li:hover>a {
         flex-basis: 20%;
     }
 
-    .side-banner {
-        position: absolute;
-        width: 40%;
-        top: 0%;
-        height: 100%;
-        opacity: 1;
-        right: 0;
+    .banner-content {
+        padding: 3rem 0 0 .2rem;
+    }
+
+    .products-container .products {
+        justify-content: center;
+    }
+
+    .products-container .products .product {
+        min-width: 280px;
+        flex-grow: unset;
+    }
+
+    .products-container .products .product .product-link {
+        padding: unset;
     }
 
 }
-
 
 
 
 
 /**===================== keyframes =================*/
-/* ------------------ fromTop eg "the sticky nav"*/
+/* ------------------ fromTop eg "the sticky header"*/
 
 @keyframes fromTop {
     from {
-        transform: translateY(-100px)
+        transform: translateY(-100px);
+        -webkit-transform: translateY(-100px);
+        -moz-transform: translateY(-100px);
+        -o-transform: translateY(-100px);
     }
 }
 
 @-webkit-keyframes fromTop {
     from {
-        transform: translateY(-100px)
+        transform: translateY(-100px);
+        -webkit-transform: translateY(-100px);
+        -moz-transform: translateY(-100px);
+        -o-transform: translateY(-100px);
     }
 }
 
 @-moz-keyframes fromTop {
     from {
-        transform: translateY(-100px)
+        transform: translateY(-100px);
+        -webkit-transform: translateY(-100px);
+        -moz-transform: translateY(-100px);
+        -o-transform: translateY(-100px);
     }
 }
 
 @-o-keyframes fromTop {
     from {
-        transform: translateY(-100px)
+        transform: translateY(-100px);
+        -webkit-transform: translateY(-100px);
+        -moz-transform: translateY(-100px);
+        -o-transform: translateY(-100px);
     }
 }
 
+/* ------------------ End of fromTop eg "the sticky header"*/
 
-/* ---------------------- show nav small devices*/
+
+/* ---------------------- show nav ul small devices*/
 @keyframes from-top {
     0% {
         top: -100%;
@@ -676,3 +1145,32 @@ nav ul li:hover>a {
         top: 0;
     }
 }
+
+
+
+/**============= from width 100% ================*/
+@keyframes from-w-100 {
+    from {
+        width: 100%;
+    }
+}
+
+@-webkit-keyframes from-w-100 {
+    from {
+        width: 100%;
+    }
+}
+
+@-moz-keyframes from-w-100 {
+    from {
+        width: 100%;
+    }
+}
+
+@-o-keyframes from-w-100 {
+    from {
+        width: 100%;
+    }
+}
+
+/*------------------- End of from width 100% */
