--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1027,6 +1027,7 @@ nav ul li:hover>a {
 footer {
     width: 100%;
     height: 400px;
+    background-color: var(--banner-clr);
 }
 
 ::-webkit-scrollbar {
