--- a/styles/styles.css
+++ b/styles/styles.css
@@ -307,6 +307,7 @@ button,
     font-weight: unset;
     background-color: var(--primary-clr);
     text-align: center;
+
 }
 
 button:hover,
@@ -970,6 +971,7 @@ nav ul li:hover>a {
     border-radius: inherit;
     padding: .6rem 0;
     text-align: center;
+    color: #fff;
 }
 
 .products-container .more-products {
