--- a/styles/styles.css
+++ b/styles/styles.css
@@ -974,7 +974,7 @@ nav ul li:hover>a {
     border-radius: inherit;
     padding: .6rem 0;
     text-align: center;
-
+    /* .. */
 }
 
 .products-container .more-products {
